--- a/README
+++ b/README
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-Apache Wicket port to Meio.Mask plugin.
-=======
-The Apache Wicket port to Meio.Mask plugin.
->>>>>>> 8830706f2ae0cd652f7bc30b7ac01116c5b43497
+Mootools MeioMask plugin for Apache Wicket.
