--- a/README
+++ b/README
@@ -6,16 +6,6 @@ Notice:
 	mootools-more version 1.3.0.1
 
 How To Use:
-    package br.com.digilabs.meiomask.examples;
-
-    import br.com.digilabs.wicket.component.meiomask.MeioMaskField;
-    import br.com.digilabs.wicket.component.meiomask.MaskType;
-    import org.apache.wicket.PageParameters;
-    import org.apache.wicket.markup.html.WebPage;
-    import org.apache.wicket.markup.html.form.Form;
-    import org.apache.wicket.markup.html.panel.FeedbackPanel;
-    import org.apache.wicket.model.CompoundPropertyModel;
-
     public class HomePage extends WebPage {
 
         private static final long serialVersionUID = 1L;
@@ -30,8 +20,7 @@ How To Use:
 
                 @Override
                 protected void onSubmit() {
-                    String temp = getModelObject().getFixedPhone();
-                    info("fixed-phone: " + temp);
+                    info("fixed-phone: " + getModelObject().getFixedPhone());
                     info("fixed-phone-us: " + getModelObject().getFixedPhoneUs());
 
                 }
