--- a/README
+++ b/README
@@ -1,38 +1,7 @@
-Mootools MeioMask plugin for Apache Wicket.
-	by Inaiat Henrique - inaiat@gmail.com
+This project has been moved to https://github.com/wicketstuff/core
 
-Notice:
-        This component is based in mootools-meio-mask plugin [https://github.com/fabiomcosta/mootools-meio-mask]
+More info: https://github.com/wicketstuff/core/wiki/Mootools-Meiomask-Plugin-Integration
 
+Thanks,
 
-How To Use:
-    public class HomePage extends WebPage {
-
-        private static final long serialVersionUID = 1L;
-        private TestModel testModel = new TestModel();
-
-        public HomePage(final PageParameters parameters) {
-
-            FeedbackPanel feedbackPanel = new FeedbackPanel("feedBack");
-            add(feedbackPanel);
-
-            Form<TestModel> form = new Form<TestModel>("form", new CompoundPropertyModel<TestModel>(testModel)) {
-
-                @Override
-                protected void onSubmit() {
-                    info("fixed-phone: " + getModelObject().getFixedPhone());
-                    info("fixed-phone-us: " + getModelObject().getFixedPhoneUs());
-
-                }
-            };
-
-            add(form);
-
-            form.add(new MeioMaskField<Long>("fixedPhoneUs", MaskType.FixedPhoneUs));
-            form.add(new MeioMaskField<String>("fixedPhone", MaskType.FixedPhone));
-
-        }
-    }
-
-
-
+Inaiat Henrique - inaiat@gmail.com
